alignment fix

--- a/src/app/shared/component/marvel-header/marvel-header.component.scss
+++ b/src/app/shared/component/marvel-header/marvel-header.component.scss
@@ -5,7 +5,6 @@ ion-header {
         text-align: center
     }
     ion-title {
-        width: auto;
         --color: #ffffff;
         font-size:22px;
         text-align: center
